@startuml

class Game {
  -clock : Clock
  -screen : Surface
  -userQuits : boolean
  +Game(factoryFlying : FactorySprites, factoryLandscape : FactorySprites)
  +play()
}

class FactorySprites {
  -periods : int[]
  -eventTypes : int[]
  +make() : GameSprite
}

abstract class Sprite {
}

abstract class GameSprite {
  +clone() : GameSprite
}

class Player {
  -moveUpSound : Sound
  -moveDownSound : Sound
  +update(pressedKeys : boolean[])
  +stopMoveSounds()
}

class Bird extends GameSprite {
  +Min_Speed : int
  +Max_Speed : int
  -time : int
  -speed : int
  +update()
  +clone() : Bird
}

class Umbrella extends GameSprite {
  +Min_Speed_y : int
  +Max_Speed_y : int
  -speed_y : int
  +update()
  +clone() : Umbrella
}

class Cloud extends GameSprite {
  +update()
  +clone() : Cloud
}

class Mountain extends GameSprite {
  +update()
  +clone() : Mountain
}

Game "1" -- "1" FactorySprites : factoryFlying
Game "1" -- "1" FactorySprites : factoryLandscape

Game "1" -- "1..*" Sprite : all_sprites
Game "1" -- "1" Player : player

FactorySprites "1" *-- "1..*" GameSprite : prototypes

Game "1" -- "*" GameSprite : flyingSprites
Game "1" -- "*" GameSprite : landscapeSprites

GameSprite --|> Sprite

Player --|> GameSprite

GameSprite <|-- Bird
GameSprite <|-- Umbrella
GameSprite <|-- Cloud
GameSprite <|-- Mountain

@enduml